--- a/ztvportfolio/docker-compose.yml
+++ b/ztvportfolio/docker-compose.yml
@@ -28,13 +28,8 @@ services:
     container_name: secure-portfolio-app
     ports:
       - "3000:3000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/secure_portfolio
-      - SERVER_PRIVATE_KEY=${SERVER_PRIVATE_KEY}
-      - SERVER_PUBLIC_KEY=${SERVER_PUBLIC_KEY}
-      - ADMIN_PUBLIC_KEY=${ADMIN_PUBLIC_KEY}
-      - INVITE_SECRET=${INVITE_SECRET}
-      - NEXT_PUBLIC_APP_URL=http://localhost:3000
+    env_file:
+      - .env.local
     depends_on:
       postgres:
         condition: service_healthy
