--- a/ztvportfolio/package.json
+++ b/ztvportfolio/package.json
@@ -49,6 +49,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "crypto": "1.0.1",
+    "crypto-js": "4.2.0",
     "date-fns": "4.1.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/crypto-js": "4.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22",
     "@types/react": "^18",
