--- a/ztvportfolio/package.json
+++ b/ztvportfolio/package.json
@@ -53,6 +53,7 @@
     "date-fns": "4.1.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "12.23.24",
     "fs": "0.0.1-security",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
