--- a/ztvportfolio/package.json
+++ b/ztvportfolio/package.json
@@ -61,6 +61,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "openai": "6.3.0",
     "qrcode.react": "4.2.0",
     "react": "19.1.0",
     "react-day-picker": "9.8.0",
